@@ -1,5 +1,8 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.2.001.0028 :
+* Random helper for potted plants, pink wheelchair, waterfire block.
+
 A21.2.001.0027 :
 * Alternative brown pallet boxes, more random rotations.
 
